Utworzono za pomocą Colab

--- a/srodowiska.ipynb
+++ b/srodowiska.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1za5spkUJf0f6IraUiNCx",
+      "authorship_tag": "ABX9TyPP+ctiTPq9sUfxFf59vWph",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -483,6 +483,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# test terminala"
+      ],
+      "metadata": {
+        "id": "lfSx4jDPbUzW"
+      }
     }
   ]
 }
